[package]
name = "fhe_rs_wasm"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly library for Client side Fully Homomorphic Encryption"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fhe = { git = "https://github.com/ashu-t3/fhe.rs", branch = "main", features = ["serde"] }
fhe-traits = { git = "https://github.com/ashu-t3/fhe.rs", branch = "main" }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
anyhow = { version = "1.0", optional = true }
rand = "0.8.5"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulp = { git = "https://github.com/ashu-t3/pulp", features = ["serde"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console", "Performance", "Window"]